[package]
name = "updater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.196", features = ["serde_derive"] }
flate2 = { version = "1.0.28", features = [
  "zlib-ng",
], default-features = false }
hex = "0.4.3"
serde_json = "1.0.113"
sha2 = { version = "0.10.8", features = ["asm"], default-features = false }
tar = "0.4.40"
tee = "0.1.0"
openssl-sys = "0.9"
openssl = { version = "0.10" }
